Completed snowboards/swift view

--- a/src/app/snowboards/snowboards-board-swift/snowboards-board-swift.component.html
+++ b/src/app/snowboards/snowboards-board-swift/snowboards-board-swift.component.html
@@ -1,3 +1,212 @@
-<p>
-  snowboards-board-swift works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/Summit/17_JedCreative_Swift.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Swift</h3>
+        <p class="monospace title-has-line">Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          Designed with a nod to the past and an eye toward the future the Swift is ready for anything. Virtually unsinkable, the Swift’s forked tail, tapered shape and wide early rise nose joined with our Original Rocker Camber Profile allows it to glide
+          through the tightest trees and ride on top of the deepest fluff but this ain’t just the ultimate powder surfer. By adding a long Carbon X, our Vario Power Grip Sidecut, mid firm flex and extensive damping we’ve made a stable board for
+          shredding hardpack conditions too. Capped off with Aluminum Tip/Tail Protection and our premium Carbonium Topsheet the Swift is a work of art. Give the mountain a Swift kick!
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/swift-1?pp=16" target="_blank">Buy Now Online</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-swift.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/Summit/17Swift.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>152</td>
+                    <td>25.7</td>
+                    <td>112</td>
+                    <td>Vario 760</td>
+                    <td>31.4/29.4</td>
+                  </tr>
+                  <tr>
+                    <td>157</td>
+                    <td>25.9</td>
+                    <td>117</td>
+                    <td>Vario 800</td>
+                    <td>31.6/29.6</td>
+                  </tr>
+                  <tr>
+                    <td>162</td>
+                    <td>26.2</td>
+                    <td>121</td>
+                    <td>Vario 832</td>
+                    <td>31.8/29.8</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Carbonium Topsheet</li>
+                <li>Original Rocker Camber Profile</li>
+                <li>Extended Transition Area</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>NS SuperLight Wood Core</li>
+                <li>STS Pretensioned Fiberglass</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>RDS 1 Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Sidewall</li>
+                <li>Durasurf XT Sintered 5501 Base</li>
+                <li>Aluminum Tip and Tail Protection</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Summit/NS_Swift17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/Summit/NS_Swift17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/Summit/NS_Swift17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+            <input class="knob" data-gal="0" value="0" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-15.png')"></canvas>
+            <input class="knob" data-gal="15" value="15" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-85.png')"></canvas>
+          <input class="knob" data-gal="85" value="85" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="62" style="width: 62%"><strong><i>62</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="62" style="width: 62%"><strong><i>62</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/JTmSeUhgWjg" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
