--- a/src/app/snowboards/snowboards-board-snowtrooper/snowboards-board-snowtrooper.component.html
+++ b/src/app/snowboards/snowboards-board-snowtrooper/snowboards-board-snowtrooper.component.html
@@ -1,3 +1,251 @@
-<p>
-  snowboards-board-snowtrooper works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/snowtrooper/17_JedCreative_Snowtrooper2.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Snowtrooper</h3>
+        <p class="monospace title-has-line">All Mountain</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          The Snowtooper is the all mountain equalizer and a great board for any riding style. It features our Original Rocker Camber Profile for amazing float and playfulness, a mid flex for all mountain versatility, with the supercharged feel of a slightly
+          setback stance. The Trooper synchronizes your ride for the entire mountain. It’s the Swiss Army snowboard.
+        </p>
+        <p>
+          <b>SNOWTROOPER  X:</b> A wide version of the original
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/snowtrooper-1?pp=16" target="_blank">Buy Now Online</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-original.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/snowtrooper/17Snowtrooper.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>152</td>
+                    <td>24.8</td>
+                    <td>116</td>
+                    <td>Vario 753</td>
+                    <td>29.2</td>
+                  </tr>
+                  <tr>
+                    <td>154</td>
+                    <td>25.0</td>
+                    <td>118</td>
+                    <td>Vario 772</td>
+                    <td>29.4</td>
+                  </tr>
+                  <tr>
+                    <td>156</td>
+                    <td>25.2</td>
+                    <td>120</td>
+                    <td>Vario 790</td>
+                    <td>29.6</td>
+                  </tr>
+                  <tr>
+                    <td>159</td>
+                    <td>25.4</td>
+                    <td>122</td>
+                    <td>Vario 818</td>
+                    <td>29.8</td>
+                  </tr>
+                  <tr>
+                    <td>162</td>
+                    <td>25.6</td>
+                    <td>125</td>
+                    <td>Vario 847</td>
+                    <td>30.0</td>
+                  </tr>
+                  <tr>
+                    <td>157X&nbsp;</td>
+                    <td>26.1</td>
+                    <td>120</td>
+                    <td>Vario 791</td>
+                    <td>30.5</td>
+                  </tr>
+                  <tr>
+                    <td>160X</td>
+                    <td>26.3</td>
+                    <td>122</td>
+                    <td>Vario 818</td>
+                    <td>30.7</td>
+                  </tr>
+                  <tr>
+                    <td>164X</td>
+                    <td>26.6</td>
+                    <td>126</td>
+                    <td>Vario 858</td>
+                    <td>31.0</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Matte Topsheet</li>
+                <li>Carbon VXR Laminate Technology</li>
+                <li>Extended Transition Rocker Camber Profile</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>STS Pretensioned Fiberglass</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>NS Custom Flightcore</li>
+                <li>RDS 2 Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Sidewall</li>
+                <li>Durasurf XT Sintered 4501 Base</li>
+                <li>P-tex Tip and Tail Protection</li>
+                <li>Full Wrap Metal Edge</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/snowtrooper/NS_Snowtrooper17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/snowtrooper/NS_Snowtrooper17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/snowtrooper/NS_Snowtrooper17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-30.png')"></canvas>
+            <input class="knob" data-gal="30" value="30" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-40.png')"></canvas>
+            <input class="knob" data-gal="40" value="40" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-30.png')"></canvas>
+          <input class="knob" data-gal="30" value="30" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="37" style="width: 37%"><strong><i>37</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="37" style="width: 37%"><strong><i>37</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/c288ZzpYtMQ" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
