Completed snowboard/chairman view

--- a/src/app/snowboards/snowboards-board-chairman/snowboards-board-chairman.component.html
+++ b/src/app/snowboards/snowboards-board-chairman/snowboards-board-chairman.component.html
@@ -1,3 +1,245 @@
-<p>
-  snowboards-board-chairman works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/chairman/17_JedCreative_Chairman.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Chairman</h3>
+        <p class="monospace title-has-line">Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          Bred to be the CEO of Shred, the Chairman oversees all other boards in its class. This carving machine utilizes a seven contact point sidecut, maximum effective edge, and is handcrafted specifically for Never Summer’s Chairman of the Boards.
+          Our most extensive damping system stabilizes the ends of the board for unmatched high-speed stability and trench digging performance. The Chairman has a tapered shape combined with Original Rocker Camber Profile giving it excellent powder floatation,
+          a surfy feel and superior execution in steep, technical lines. On the Chairman you carve, you carve... No slide!
+        </p>
+        <p>
+          <b>CHAIRMAN  X:</b> A wide version of the original
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/chairman-1?pp=16" target="_blank">Buy Now</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-original.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/chairman/17Chairman.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>157</td>
+                    <td>25.6</td>
+                    <td>123</td>
+                    <td>Vario 820</td>
+                    <td>29.4/29.1</td>
+                  </tr>
+                  <tr>
+                    <td>160</td>
+                    <td>25.6</td>
+                    <td>127</td>
+                    <td>Vario 850</td>
+                    <td>29.5/29.0</td>
+                  </tr>
+                  <tr>
+                    <td>164</td>
+                    <td>25.7</td>
+                    <td>131</td>
+                    <td>Vario 950</td>
+                    <td>29.3/28.7</td>
+                  </tr>
+                  <tr>
+                    <td>173</td>
+                    <td>26.1</td>
+                    <td>139</td>
+                    <td>Vario 1050</td>
+                    <td>29.6/29.2</td>
+                  </tr>
+                  <tr>
+                    <td>161X</td>
+                    <td>26.6</td>
+                    <td>127</td>
+                    <td>Vario 850</td>
+                    <td>30.5/30.0</td>
+                  </tr>
+                  <tr>
+                    <td>165X</td>
+                    <td>26.7</td>
+                    <td>131</td>
+                    <td>Vario 950</td>
+                    <td>30.4/30.0</td>
+                  </tr>
+                  <tr>
+                    <td>169X</td>
+                    <td>26.7</td>
+                    <td>135</td>
+                    <td>Vario 1050</td>
+                    <td>30.1/29.7</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Carbonium Topsheet</li>
+                <li>Carbon Max Laminate Technology</li>
+                <li>Original Rocker Camber Profile</li>
+                <li>Extended Transition Area</li>
+                <li>Chairman Power Grip Sidecut</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>STS Pre-tensioned Fiberglass</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>NS SuperLight Wood Core</li>
+                <li>RDS 1+ Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-Tex Sidewall</li>
+                <li>Durasurf XT Sintered 5501 Base</li>
+                <li>Harmonic Tip/Tail Damper</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/chairman/NS_Chairman17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/chairman/NS_Chairman17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/chairman/NS_Chairman17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+            <input class="knob" data-gal="0" value="0" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-30.png')"></canvas>
+            <input class="knob" data-gal="30" value="30" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-70.png')"></canvas>
+          <input class="knob" data-gal="70" value="70" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="87" style="width: 87%"><strong><i>87</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="87" style="width: 87%"><strong><i>87</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/YQkPyrBqqZo" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
