--- a/src/app/snowboards/snowboards-board-chairman/snowboards-board-chairman.component.scss
+++ b/src/app/snowboards/snowboards-board-chairman/snowboards-board-chairman.component.scss
@@ -1,1 +1,10 @@
-@import '../assets/snowboard-views'
+@import '../assets/snowboard-views';
+
+.top-parallax {
+    height: 695px;
+    top: 120px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
