Completed snowboard/bantam view

--- a/src/app/snowboards/snowboards-board-bantam/snowboards-board-bantam.component.html
+++ b/src/app/snowboards/snowboards-board-bantam/snowboards-board-bantam.component.html
@@ -1,3 +1,225 @@
-<p>
-  snowboards-board-bantam works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../assets/products/snowboards/evomini/17_JedCreative_Bantam.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      <div class="one_half">
+        <h3 class="title">Bantam</h3>
+        <p class="monospace title-has-line">Boy's All Mountain Twin</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          The Bantam is a knockout. It comes equipped with our Original Rocker Camber Profile that makes progressing so much easier. This board also features our Vario Power Grip Sidecut with a super soft flex. Progressing quickly on the Bantam, your shred
+					game will be leveling up in no time.
+        </p>
+  
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer-snow.shptron.com/p/bantam?pp=16" target="_blank">Buy Now Online</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <hr class="medium" />
+        <img src="../../../assets/products/snowboards/camber-original.png" />
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../assets/products/snowboards/evomini/17Bantam.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../assets/products/snowboards/techspecs_parallax.jpg'); background-position: 50% -3px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.75)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <p>
+              <table>
+                <thead>
+                  <tr>
+                    <td>Size*</td>
+                    <td>Waist</td>
+                    <td>Edge</td>
+                    <td>Sidecut**</td>
+                    <td>Tip / Tail</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>119</td>
+                    <td>20.6</td>
+                    <td>88</td>
+                    <td>Vario 540</td>
+                    <td>24.0</td>
+                  </tr>
+                  <tr>
+                    <td>125</td>
+                    <td>21.5</td>
+                    <td>97</td>
+                    <td>Vario 550</td>
+                    <td>25.4</td>
+                  </tr>
+                  <tr>
+                    <td>130</td>
+                    <td>22.3</td>
+                    <td>101</td>
+                    <td>Vario 560</td>
+                    <td>26.2</td>
+                  </tr>
+                  <tr>
+                    <td>136</td>
+                    <td>23.2</td>
+                    <td>106</td>
+                    <td>Vario 600&nbsp;</td>
+                    <td>27.2</td>
+                  </tr>
+                  <tr>
+                    <td>142</td>
+                    <td>24.1</td>
+                    <td>106</td>
+                    <td>Vario 640</td>
+                    <td>28.2</td>
+                  </tr>
+                </tbody>
+              </table>
+              <br />
+            <p>* Measurements in centimeters. ** Multiple radius average.</p>
+          </div>
+          <div class="one_half last">
+            <h3 class="title-has-line">Features</h3>
+            <div>
+              <ul>
+                <li>Matte Topsheet</li>
+                <li>Low Profile Tip/Tail</li>
+                <li>Original Rocker Camber Profile</li>
+                <li>Vario Power Grip Sidecut</li>
+                <li>Bi-Lite Fiberglass</li>
+                <li>Press Flex Core</li>
+                <li>FDS Damping System</li>
+                <li>Elastomeric Underfoot Stabilizers</li>
+                <li>Sintered P-tex Sidewall</li>
+                <li>Durasurf XT Sintered 2501 Base</li>
+                <li>P-tex Tip and Tail Protection</li>
+                <li>Full Wrap Metal Edge</li>
+              </ul>
+              <br />
+            </div>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/evomini/NS_Bantam17_1.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/snowboards/evomini/NS_Bantam17_2.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/snowboards/evomini/NS_Bantam17_3.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr class="medium">
+
+      <h3 class="text-align-center title-has-line">Ride Profile</h3>
+
+      <hr class="small">
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-50.png')"></canvas>
+            <input class="knob" data-gal="50" value="50" style="width: 99px;height: 63px;position: absolute;vertical-align: middle;margin-top: 63px;margin-left: -144px;border: 0px;background: none;font-style: normal;font-variant: normal;font-weight: bold;font-stretch: normal;font-size: 38px;line-height: normal;font-family: Arial;text-align: center;color: rgb(255, 255, 255);padding: 0px;-webkit-appearance: none;">
+          </div>
+          <h5 class="radial-counter-name">Freestyle</h5>
+        </div>
+      </div>
+
+      <div class="one_third text-align-center">
+        <div class="radial-counter">
+          <div style="display: inline; width: 190px; height: 190px;">
+            <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-50.png')"></canvas>
+            <input class="knob" data-gal="50" value="50" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+          </div>
+            <h5 class="radial-counter-name">All Mountain</h5>
+          </div>
+      </div>
+
+      <div class="one_third text-align-center last">
+        <div class="radial-counter">
+        <div style="display: inline; width: 190px; height: 190px;">
+          <canvas width="190" height="190" style="background-image:url('../../../assets/img/snowboards/dial-0.png')"></canvas>
+          <input class="knob" data-gal="0" value="0" style="width: 99px; height: 63px; position: absolute; vertical-align: middle; margin-top: 63px; margin-left: -144px; border: 0px; background: none; font-style: normal; font-variant: normal; font-weight: bold; font-stretch: normal; font-size: 38px; line-height: normal; font-family: Arial; text-align: center; color: rgb(255, 255, 255); padding: 0px; -webkit-appearance: none;">
+        </div>
+          <h5 class="radial-counter-name">Freeride</h5>
+        </div>
+      </div>
+
+      <hr class="smallline">
+
+      <div class="one_half">
+        <h5 class="text-align-center title-has-line">Flex</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="12" style="width: 12%"><strong><i>12</i></strong></span>
+            </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Soft</td>
+            <td>Mid</td>
+            <td>Mid Firm</td>
+            <td>Firm</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="one_half last">
+        <h5 class="text-align-center title-has-line">Damp</h5>
+        <ul class="progress-bar">
+          <li>
+            <div class="bar-wrap">
+              <span data-width="12" style="width: 12%"><strong><i>12</i></strong></span>
+              </div>
+          </li>
+        </ul>
+        <table class="slidertable">
+          <tr>
+            <td>Snappy</td>
+            <td>Mid</td>
+            <td>Smooth</td>
+            <td>Cushy</td>
+          </tr>
+        </table>
+      </div>
+
+      <hr>
+
+      <section class="parallax2 video-youtube" style="background-image: url('../../../../assets/products/snowboards/snowboardvideo-background.jpg'); background=position: 50% 21px; height: 1000px;">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/WI3ECmJKfIQ" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
